app/assets/stylesheets/custom.scss
html {
  background-color: #f5f6f8;
  height: 100vh;
}

body {
  height: 100%;
  background-color: #f5f6f8;
}

h1.title {
  font-weight: bold;
}

/* prettier-ignore */
.brand-nav {
  background:
    linear-gradient(
      0deg,
      rgba(87, 172, 239, 1) 0%,
      rgba(93, 173, 237, 1) 100%
    );
}

.main-light-background {
  background-color: #f5f6f8;
}

aside {
  z-index: 1;
}

/* prettier-ignore */
.side-nav {
  background:
    linear-gradient(
      0deg,
      rgb(50, 60, 70) 0%,
      rgb(14, 29, 46) 100%
    );
}

.second-main-column {
  margin-left: auto;
}

.margin-zero-auto {
  margin: 0 0 auto;
}

.headshot {
  max-width: 100%;
  max-height: 100%;
}

.deeps-headshot {
  width: 55px;
}

// .sidenav-border-color {
//   border-color: #364958 !important;
// }

// .sidenav-user-badge-border {
//   border-bottom: 1px solid #364958;
// }

.side-nav-followers-container {
  border-bottom: none !important;
}

div.side-nav-followers-container:first-child {
  border-right: 1px solid #24333d !important;
}

.sidenav-followers-border {
  border-right: 1px solid #24333d !important;
}

.sidenav-followers-text {
  font-size: calc(0.5em + 1vw);
}

.nav-text-dark {
  color: #5e738b !important;
}

.sidenav-user-badge-text {
  font-size: calc(0.65em + 1vw);
}

.active {
  background: linear-gradient(0deg, #57acef 0%, #5daded 100%) !important;
  color: white !important;
}

.nav-pills .nav-link {
  border-radius: 0 !important;
}

hr {
  margin: 0 !important;
  color: inherit;
  background-color: #364958;
  border: 0;
  opacity: 0.25;
}

.secondary-top-nav-items {
  top: 4%;
}

.secondary-top-nav-items-active {
  border-bottom: 4px solid #5daded;
}

.secondary-top-nav-items-text {
  font-weight: 700 !important;
}

.black-text {
  color: #2e3b4c !important;
}

.main-grid {
  display: grid;
  // grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr;
  gap: 1rem 1rem;
}

.deep-text-dark {
  color: #9d9d9f;
}

.deep-text-blue {
  color: #5daded;
}

.text-darkish-white {
  color: #bdc9d5;
}

.who-to-follow-nav-borders {
  border-bottom: none;
}

.who-to-follow-items {
  display: flex;
  flex-direction: column;
}

// Media for sm
@media only screen and (min-width: 576px) {
  .side-nav-followers-container {
    border-bottom: none;
  }
}

// Media for md (ipad and up)
@media only screen and (min-width: 768px) {
  .sidenav-user-badge-text {
    font-size: calc(0.3em + 1vw);
  }

  .sidenav-followers-text {
    font-size: 1rem;
  }

  .side-nav-followers-container {
    border-bottom: none;
  }

  .secondary-top-nav-items {
    line-height: 1.25;
  }
}
// Only tablets
@media only screen and (min-width: 768px) and (max-width: 900px) {
  .who-to-follow-items {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }
}

// Media for lg
@media only screen and (min-width: 992px) {
  .side-nav-followers-container {
    border-bottom: 1px solid #24333d !important;
  }

  .secondary-top-nav-items {
    line-height: 1.5;
  }

  .secondary-top-nav-items-not-active {
    line-height: 1.75rem !important;
  }

  .who-to-follow-nav-borders {
    border-bottom: 1px solid #dee2e6 !important;
  }
}

// Media for xl
@media only screen and (min-width: 1200px) {
  .side-nav-followers-container {
    border-bottom: 1px solid #24333d !important;
  }
}

